# scriptboard

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yaml  linux.yaml  macos_arm.yaml  macos_intel.yaml  windows.yaml
changelogs/: 1.0.0-changelog.txt  1.1.0-CHANGELOG.txt  1.1.1-changelog.txt  1.2.0-changelog.txt
lang/: scriptboard.pot
lang/en/LC_MESSAGES/: scriptboard.po
lang/en_GB/LC_MESSAGES/: scriptboard.po
lang/fr/LC_MESSAGES/: scriptboard.po
src/: file_storage.rs  main.rs
src/app/: mod.rs
src/app/notifications/: mod.rs
src/app/scripts/: commands.rs  execute.rs  mod.rs
src/app/scripts/commands/: linux.rs  macos.rs  mod.rs  windows.rs
src/app/store/: mod.rs  structs.rs  utils.rs
src/app/utils/: mod.rs
src/ui/components/: add_script_modal.rs  mod.rs  notification_overlay.rs  scripts_settings_modal.rs
src/ui/pages/: about_page.rs  main_page.rs  mod.rs  settings_page.rs
test-scripts/: test.ps1
ui/: scriptboard.slint  structs.slint  themes.slint
ui/components/: add-script-modal.slint  header.slint  notifications-overlay.slint  script-card.slint  script-settings-modal.slint  template_page.slint
ui/pages/: about.slint  main.slint  settings.slint
ui/sleek-ui/: app-theme.slint  themes.slint  widgets.slint
ui/sleek-ui/utils/: button-interface.slint
ui/sleek-ui/widgets/button/: button.slint  theme.slint
ui/sleek-ui/widgets/divider/: divider.slint
ui/sleek-ui/widgets/icon/: icon.slint
ui/sleek-ui/widgets/icon-button/: icon-button.slint  theme.slint
ui/sleek-ui/widgets/input/: input.slint  theme.slint
ui/sleek-ui/widgets/link/: link.slint
ui/sleek-ui/widgets/popover/: popover.slint
ui/sleek-ui/widgets/spinner/: spinner.slint
ui/sleek-ui/widgets/text/: text.slint
ui/sleek-ui/widgets/title/: title.slint
ui/windows/: script_output_window.slint
