[package]
name = "scriptboard"
version = "1.1.0"
edition = "2024"
license = "GPL-3.0-only"

[package.metadata.winresource]
FileDescription = "Scriptboard"
FileVersion = "1.1.0"
ProductName = "Scriptboard"
Comments = "A simple desktop software to execute saved script files."
OriginalFilename = "scriptboard.exe"
InternalName = "scriptboard.exe"
LegalCopyright = "Copyright (C) 2025 uAtomicBoolean"

[dependencies]
slint = { version = "1.11.0", features = ["renderer-skia"] }
dirs = "6.0.0"
rfd = "0.15.3"
once_cell = "1.21.3"
shlex = "1.3.0"
dotenv = "0.15.0"
uuid = { version = "1.17.0", features = ["v4"] }
serde = "1.0.219"
serde_json = "1.0.140"
open = "5.3.2"
fern = "0.7.1"
humantime = "2.2.0"
log = "0.4.27"

[build-dependencies]
slint-build = "1.11.0"
dotenv = "0.15.0"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.19"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[package.metadata.packager]
version = "1.1.0"
authors = ["uAtomicBoolean"]
copyright = "Copyright (C) 2025 uAtomicBoolean"
category = "DeveloperTool"
before-packaging-command = "cargo build --release"
product-name = "Scriptboard"
identifier = "com.scriptboard.app"
resources = ["Cargo.toml", "src", "res/icon.ico", "res/32x32.png"]
icons = ["res/32x32.png", "res/icon.ico"]
binaries_dir = "target/release"
out_dir = "dist/"
licenseFile = "LICENSE.txt"
